--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,13 @@ body,
 .leaflet-top {
   z-index: 0 !important;
 }
+
+
+.rdrMonth {
+  width: 100% !important;
+}
+
+.rdrCalendarWrapper {
+  font-size: 16px !important;
+  width: 100% !important;
+}
